--- a/app/src/main/res/layout/fragment_employee_dash_board.xml
+++ b/app/src/main/res/layout/fragment_employee_dash_board.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/UserNameTextView"
-        android:layout_width="316dp"
+        android:layout_width="wrap_content"
         android:layout_height="46dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
@@ -16,8 +16,6 @@
         android:gravity="center_vertical"
         android:text="@string/hello_user_"
         android:textAppearance="@style/hello_user_"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -86,18 +84,17 @@
         android:id="@+id/rcViewPunch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="92dp"
-        app:layout_constraintBottom_toTopOf="@+id/LogoutButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />
 
     <Button
         android:id="@+id/LogoutButton"
-        android:layout_width="240dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Log Out"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="98dp"
-        tools:layout_editor_absoluteY="638dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
