--- a/app/src/main/res/layout/punchincard.xml
+++ b/app/src/main/res/layout/punchincard.xml
@@ -30,7 +30,7 @@
             android:id="@+id/punchtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="44dp"
+            android:layout_marginStart="10dp"
             android:text="9:50 Pm"
             android:textColor="@color/black"
             android:textSize="20dp"
@@ -45,12 +45,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginBottom="56dp"
             android:text="Punch IN"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/punchOutTxt"
             app:layout_constraintStart_toStartOf="parent" />
 
 
@@ -58,23 +57,20 @@
             android:id="@+id/punchOutTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="268dp"
             android:layout_marginBottom="4dp"
+            android:layout_marginStart="24dp"
             android:text="3, amit soc"
             android:textColor="@color/black"
             android:textSize="25dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/punchInTxt"
-            app:layout_constraintVertical_bias="0.294" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/LocationCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="56dp"
             android:text="Punch Out"
             android:textColor="@color/black"
             android:textSize="25dp"
