--- a/app/src/main/res/layout/fragment_employee_dash_board.xml
+++ b/app/src/main/res/layout/fragment_employee_dash_board.xml
@@ -84,6 +84,7 @@
         android:id="@+id/rcViewPunch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
