--- a/app/src/main/res/layout/fragment_admin_login.xml
+++ b/app/src/main/res/layout/fragment_admin_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EmployeeLogin">
+    tools:context=".AdminLoginFragment">
 
     <TextView
         android:id="@+id/AdminLogin"
@@ -16,7 +16,7 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="20dp"
         android:gravity="center_horizontal|center_vertical"
-        android:text="Employee Login"
+        android:text="Admin Login"
         android:textSize="23sp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -100,21 +100,5 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AdminPasswordEditText" />
-
-    <TextView
-        android:id="@+id/SignUpTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="No Account?SIGN UP now"
-        android:textAlignment="center"
-        android:textColor="@color/purple_500"
-        android:textSize="21sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/AdminEmployeeButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
