--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,7 +7,7 @@
     tools:context=".LoginFragment">
 
     <TextView
-        android:id="@+id/EmployeeLogin"
+        android:id="@+id/AdminLogin"
         android:layout_width="316dp"
         android:layout_height="46dp"
         android:layout_centerHorizontal="true"
