--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -13,6 +13,12 @@
         <action
             android:id="@+id/action_loginFragment_to_employeeLogin"
             app:destination="@id/employeeLogin" />
+        <action
+            android:id="@+id/action_loginFragment_to_adminLoginFragment"
+            app:destination="@id/adminLoginFragment" />
+        <action
+            android:id="@+id/action_loginFragment_self"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/employeeLogin"
@@ -46,4 +52,18 @@
         android:name="com.jams.vedantattendancesystem.PunchInFragment"
         android:label="fragment_punch_in"
         tools:layout="@layout/fragment_punch_in" />
+    <fragment
+        android:id="@+id/adminLoginFragment"
+        android:name="com.jams.vedantattendancesystem.AdminLoginFragment"
+        android:label="fragment_admin_login"
+        tools:layout="@layout/fragment_admin_login" >
+        <action
+            android:id="@+id/action_adminLoginFragment_to_adminDashboard"
+            app:destination="@id/adminDashboard" />
+    </fragment>
+    <fragment
+        android:id="@+id/adminDashboard"
+        android:name="com.jams.vedantattendancesystem.AdminDashboard"
+        android:label="fragment_admin_dashboard"
+        tools:layout="@layout/fragment_admin_dashboard" />
 </navigation>
