--- a/app/src/main/res/layout/fragment_employee_dash_board.xml
+++ b/app/src/main/res/layout/fragment_employee_dash_board.xml
@@ -6,19 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".EmployeeDashBoard">
 
-    <TextView
-        android:id="@+id/UserNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="46dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="20dp"
-        android:gravity="center_vertical"
-        android:text="@string/hello_user_"
-        android:textAppearance="@style/hello_user_"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <View
         android:id="@+id/rectangle_2"
         android:layout_width="316dp"
@@ -90,12 +77,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />
 
-    <Button
+    <ImageView
         android:id="@+id/LogoutButton"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="Log Out"
-        android:textSize="20sp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="36dp"
+        android:src="@drawable/logout_24"
+        app:layout_constraintBottom_toTopOf="@+id/rectangle_2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/UserNameTextView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/UserNameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="46dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="36dp"
+        android:gravity="center_vertical"
+        android:text="@string/hello_user_"
+        android:textAppearance="@style/hello_user_"
+        app:layout_constraintEnd_toStartOf="@+id/LogoutButton"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
