--- a/app/src/main/res/layout/fragment_employee_dash_board.xml
+++ b/app/src/main/res/layout/fragment_employee_dash_board.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EmployeeDashBoard">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+
+
 
     <View
         android:id="@+id/rectangle_2"
         android:layout_width="316dp"
-        android:layout_height="206dp"
+        android:layout_height="150dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="46dp"
@@ -54,36 +60,40 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/rectangle_2" />
 
+
     <Button
         android:id="@+id/PunchInBtn"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:text="Punch In"
+        android:text="Punch"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.567"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/rectangle_2" />
-
+        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
+        app:layout_constraintVertical_bias="0.764" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcViewPunch"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />
+        app:layout_constraintTop_toBottomOf="@+id/rectangle_2"
+        />
 
     <ImageView
         android:id="@+id/LogoutButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="36dp"
         android:src="@drawable/logout_24"
+
         app:layout_constraintBottom_toTopOf="@+id/rectangle_2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -97,7 +107,7 @@
         android:layout_height="46dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="52dp"
         android:gravity="center_vertical"
         android:text="@string/hello_user_"
         android:textAppearance="@style/hello_user_"
@@ -106,3 +116,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
